@@ -20,6 +20,8 @@ Version 7.3. 15 April 2019 - xxx edition
 --Footer now completely follows GUI Style
 --Reordered cpu use, numbers in red when cpu use > 85%
 
+Improved Waveform window: now the wave adjusts automatically to the zxwindow size
+
 -Fixed bug having more than 256 text to adventure keyboard words
 -Fixed bug on CPC vertical scrolling
 -Fixed segmentation fault bug when drawing CPC machine
